crates/rome_formatter/tests/specs/prettier/module-blocks/range.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: range.js

---
# Input
```js
let moduleBlock = module {  <<<PRETTIER_RANGE_START>>>export let y = 1;
};

fo<<<PRETTIER_RANGE_END>>>o(module { export let foo = "foo"; })

```

# Output
```js
let moduleBlock = module;
{
  <<<PRETTIER_RANGE_START>>>
  export let y = 1;
}

fo<<<PRETTIER_RANGE_END>>>o(module { export let foo = "foo";
})

```

# Errors
```
error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ range.js:1:26
  │
1 │ let moduleBlock = module {  <<<PRETTIER_RANGE_START>>>export let y = 1;
  │ -------------------------^ An explicit or implicit semicolon is expected here...
  │ │                         
  │ ...Which is required to end this statement

error[SyntaxError]: expected a statement but instead found '<<<PRETTIER_RANGE_START>>>'
  ┌─ range.js:1:29
  │
1 │ let moduleBlock = module {  <<<PRETTIER_RANGE_START>>>export let y = 1;
  │                             ^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected a statement here

error[SyntaxError]: Illegal use of an import declaration not at the top level
  ┌─ range.js:1:55
  │
1 │ let moduleBlock = module {  <<<PRETTIER_RANGE_START>>>export let y = 1;
  │                                                       ^^^^^^^^^^^^^^^^^ move this declaration to the top level

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ range.js:4:5
  │
4 │ fo<<<PRETTIER_RANGE_END>>>o(module { export let foo = "foo"; })
  │     ^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: expected `,` but instead found `{`
  ┌─ range.js:4:36
  │
4 │ fo<<<PRETTIER_RANGE_END>>>o(module { export let foo = "foo"; })
  │                                    ^ unexpected

error[SyntaxError]: expected `:` but instead found `let`
  ┌─ range.js:4:45
  │
4 │ fo<<<PRETTIER_RANGE_END>>>o(module { export let foo = "foo"; })
  │                                             ^^^ unexpected

error[SyntaxError]: expected `,` but instead found `foo`
  ┌─ range.js:4:49
  │
4 │ fo<<<PRETTIER_RANGE_END>>>o(module { export let foo = "foo"; })
  │                                                 ^^^ unexpected

error[SyntaxError]: Did you mean to use a `:`? An `=` can only follow a property name when the containing object literal is part of a destructuring pattern.
  ┌─ range.js:4:53
  │
4 │ fo<<<PRETTIER_RANGE_END>>>o(module { export let foo = "foo"; })
  │                                                     ^

error[SyntaxError]: expected `,` but instead found `;`
  ┌─ range.js:4:60
  │
4 │ fo<<<PRETTIER_RANGE_END>>>o(module { export let foo = "foo"; })
  │                                                            ^ unexpected

error[SyntaxError]: expected a statement but instead found '})'
  ┌─ range.js:4:62
  │
4 │ fo<<<PRETTIER_RANGE_END>>>o(module { export let foo = "foo"; })
  │                                                              ^^ Expected a statement here


```


